compiler/testData/diagnostics/tests/cast/AsErasedError.kt

fun ff(c: Collection<String>) = c <!CAST_NEVER_SUCCEEDS!>as<!> List<Int>
